--- a/src/app/main/auth/login/login.html
+++ b/src/app/main/auth/login/login.html
@@ -1,4 +1,3 @@
-
 <div class="login-overlay">
 	<div class="join-logo"></div>
 </div>
@@ -7,31 +6,39 @@
 	<div class="logo">
 		<img src="/images/join_logo/join_logo_dark.svg" alt="" />
 	</div>
-	<div class="login-window">
-		<div class="headline">
-			<h1>Log in</h1>
-			<div class="seperator"></div>
+
+	<div class="content">
+		<div class="login-window">
+			<div class="headline">
+				<h1>Log in</h1>
+				<div class="seperator"></div>
+			</div>
+
+			<div class="inputs">
+				<input type="text" placeholder="Email" />
+				<input type="text" placeholder="Password" />
+			</div>
+
+			<div class="login-buttons">
+				<button class="login-button">
+					<a routerLink="summary">Login</a>
+				</button>
+				<button class="guest-login">
+					<a routerLink="summary">Guest Log in</a>
+				</button>
+			</div>
 		</div>
 
-		<div class="inputs">
-			<input type="text" placeholder="Email" />
-			<input type="text" placeholder="Passwort" />
-		</div>
-
-		<div class="login-buttons">
-			<button class="login-button">
-				<a routerLink="summary">Login</a>
+		<div class="register">
+			<span>Not a Join user?</span>
+			<button>
+				<a routerLink="summary">Sign up</a>
 			</button>
-			<button class="guest-login">
-				<a routerLink="summary">Guest Log in</a>
-			</button>
 		</div>
 
-    <div class="regisster">
-
-    </div>
-    <div class="legal-notes">
-
-    </div>
+		<div class="legal-notes">
+			<a routerLink="summary">Privacy Policy</a>
+			<a routerLink="summary">Legal Notice</a>
+		</div>
 	</div>
 </div>
