--- a/src/app/main/auth/login/login.html
+++ b/src/app/main/auth/login/login.html
@@ -15,8 +15,15 @@
 			</div>
 
 			<div class="inputs">
-				<input type="text" placeholder="Email" />
-				<input type="text" placeholder="Password" />
+				<div class="input-wrapper" [class.hide-icon]="email.length > 4">
+					<img src="/images/login_section/mail_icon.svg" class="input-icon" />
+					<input type="text" placeholder="Email" [(ngModel)]="email" />
+				</div>
+
+				<div class="input-wrapper" [class.hide-icon]="password.length > 8">
+					<img src="/images/login_section/lock.svg" class="input-icon" />
+					<input type="password" placeholder="Password" [(ngModel)]="password" />
+				</div>
 			</div>
 
 			<div class="login-buttons">
