--- a/src/app/main/auth/login/login.scss
+++ b/src/app/main/auth/login/login.scss
@@ -1,3 +1,5 @@
+@use "../../../../styles/mixins";
+
 * {
 	margin: 0;
 	padding: 0;
@@ -89,11 +91,11 @@ body {
 		margin-bottom: 48px;
 		gap: 24px;
 
-    span {
-      font-size: 20px;
-      color: #2a3547;
-      font-weight: 500;
-    }
+		span {
+			font-size: 20px;
+			color: #2a3547;
+			font-weight: 500;
+		}
 
 		button {
 			border: none;
@@ -121,7 +123,7 @@ body {
 			text-decoration: none;
 			color: #a8a8a8;
 			padding: 8px;
-      font-size: 16px;
+			font-size: 16px;
 		}
 	}
 }
@@ -148,8 +150,8 @@ body {
 
 		h1 {
 			margin-bottom: 8px;
-			font-size: 40px;
-      font-weight: bold;
+			font-size: 47px;
+			font-weight: bold;
 		}
 
 		.seperator {
@@ -168,11 +170,34 @@ body {
 		gap: 20px;
 		margin-bottom: 24px;
 
-		input {
-			border: 1px solid grey;
-			border-radius: 8px;
-			height: 30px;
-			padding-left: 12px;
+		.input-wrapper {
+			position: relative;
+			width: 100%;
+			display: flex;
+			align-items: center;
+
+			input {
+				width: 100%;
+				padding-right: 40px;
+				padding-left: 12px;
+				height: 30px;
+				border-radius: 8px;
+				border: 1px solid grey;
+			}
+
+			.input-icon {
+				position: absolute;
+				right: 12px;
+				height: 18px;
+				width: 18px;
+				pointer-events: none;
+				opacity: 1;
+				transition: opacity 0.3s ease;
+			}
+
+			&.hide-icon .input-icon {
+				opacity: 0;
+			}
 		}
 	}
 
@@ -217,4 +242,131 @@ body {
 	}
 }
 
+@include mixins.desktop {
+	.login-overlay {
+		background-color: white;
+	}
 
+	.join-logo {
+		background-image: url("../../../../../public/images/join_logo/join_logo_dark.svg");
+	}
+
+	.logo img {
+		height: 121px;
+		width: 100px;
+	}
+
+	.login {
+		width: 100%;
+	}
+
+	.content {
+		.register {
+			position: fixed;
+			top: calc(env(safe-area-inset-top, 0px) + 18px);
+			right: calc(env(safe-area-inset-right, 0px) + 18px);
+			justify-content: flex-end;
+			gap: 32px;
+			z-index: 100;
+
+			button {
+				border: none;
+				border-radius: 10px;
+				background-color: #2a3547;
+				width: auto;
+				height: 30px;
+				padding: 0 12px;
+
+				a {
+					text-decoration: none;
+					font-weight: bold;
+					color: whitesmoke;
+					padding: 8px;
+				}
+			}
+		}
+
+		.legal-notes {
+			width: 100%;
+			display: flex;
+			justify-content: space-around;
+			margin-bottom: 12px;
+
+			a {
+				text-decoration: none;
+				color: #a8a8a8;
+				padding: 8px;
+				font-size: 16px;
+			}
+		}
+	}
+
+	.login-window {
+		height: 50vh;
+		width: 70vw;
+		max-height: 650px;
+		max-width: 850px;
+		margin-bottom: 64px;
+
+		.headline {
+			margin-bottom: 48px;
+
+			h1 {
+				font-size: 47px;
+			}
+		}
+
+		.inputs {
+			gap: 40px;
+			margin-bottom: 24px;
+      width: 350px;
+
+			.input-wrapper {
+				input {
+					height: 48px;
+					border-radius: 12px;
+				}
+			}
+		}
+
+		.login-buttons {
+			display: flex;
+			flex-direction: row;
+			justify-content: center;
+			align-items: center;
+			gap: 16px;
+
+			.login-button {
+				border: none;
+				border-radius: 10px;
+				background-color: #2a3547;
+				width: 180px;
+				height: 30px;
+
+				a {
+					text-decoration: none;
+					font-weight: bold;
+					color: whitesmoke;
+					padding: 8px;
+				}
+			}
+
+			.guest-login {
+				width: 190px;
+				height: 30px;
+				border: solid 1px #2a3547;
+				border-radius: 10px;
+				background-color: white;
+				width: 120px;
+				height: 30px;
+
+				a {
+					text-decoration: none;
+					font-weight: bold;
+					color: #2a3547;
+					padding: 8px;
+				}
+			}
+		}
+	}
+}
