fixed errors in terminal console for opening website

--- a/src/app/main/auth/signup/signup.html
+++ b/src/app/main/auth/signup/signup.html
@@ -1,3 +1,7 @@
+<div class="login-overlay">
+	<div class="join-logo"></div>
+</div>
+
 <div class="login">
 	<div class="logo">
 		<img src="/images/join_logo/join_logo_dark.svg" alt="" />
