personal data added

--- a/src/app/main/info/legal-notice/legal-notice.html
+++ b/src/app/main/info/legal-notice/legal-notice.html
@@ -4,13 +4,13 @@
 
         <h2>Imprint</h2>
         <div class="address-box">
-            <p>Calvin, Christoph, Phillip, Madina, Falko</p>
-            <p>address</p>
-            <p>city</p>
+            <p>Madina Askar Zada</p>
+            <p>Luckemeyerstr. 49</p>
+            <p>40629 Düsseldorf</p>
         </div>
 
         <h3>Exploring the Board</h3>
-        <p>Email: [Email]</p>
+        <p>Email: madin.aska@gmail.com</p>
 
         <div>
             <h3>Acceptance of terms</h3>
@@ -61,7 +61,7 @@
                 reasonable legal fees) arising out of or relating to your use of <span class="highlight">Join</span>
                 and/or your breach of this Legal Notice.</p> <br />
 
-            <P>For any questions or notices, please contact us at team@gmail.com.</P>
+            <P>For any questions or notices, please contact us at madin.aska@gmail.com.</P>
 
             <p class="date">Date: October 17, 2025</p>
         </div>
