--- a/src/app/main/info/legal-notice/legal-notice.html
+++ b/src/app/main/info/legal-notice/legal-notice.html
@@ -1,5 +1,8 @@
 <div class="legal-notice-wrapper">
     <div class="legal-notice">
+        <button class="back-arrow" (click)="location.back()">
+            <img src="images/assets/arrow_left_line.svg" alt="back arrow" />
+        </button>
         <h1>Legal Notice</h1>
 
         <h2>Imprint</h2>
