refactor help component: replace routerLink with button for navigation and add button styles

--- a/src/app/main/info/help/help.scss
+++ b/src/app/main/info/help/help.scss
@@ -1,5 +1,11 @@
 @use "../../../../styles/mixins";
 
+button {
+	border: none;
+	background: none;
+	cursor: pointer;
+}
+
 .container {
 	height: 100%;
 	width: 100%;
