--- a/src/app/main/info/privacy-policy/privacy-policy.scss
+++ b/src/app/main/info/privacy-policy/privacy-policy.scss
@@ -1,18 +1,58 @@
 * {
-  box-sizing: border-box;
-  margin: 0;
-  scroll-behavior: smooth;
+	box-sizing: border-box;
+	margin-bottom: 32px;
+	scroll-behavior: smooth;
+
+	h2 {
+		margin-bottom: 12px;
+		font-size: 27px;
+		font-weight: bold;
+	}
+
+	h3 {
+		margin-bottom: 12px;
+		font-size: 20px;
+		font-weight: bold;
+	}
+
+	h4 {
+		margin-top: 12px;
+		margin-bottom: 8px;
+		font-size: 18px;
+		font-weight: bold;
+	}
+
+	a {
+		text-decoration: none;
+		color: var(--bg-color-blue-lighter);
+	}
+
+	span {
+		font-size: var(--fs-small);
+
+    ul {
+      margin-left: 32px;
+
+      li {
+        margin-bottom: 12px;
+      }
+    }
+	}
 }
 
 .content {
-  padding: 20px;
-  padding-bottom: 30px;
-  height: 90vh;
+	padding: 24px;
+	height: 80vh;
   overflow-y: auto;
 
-  .headline {
-    h1 {
-      font-size: 61px;
-    }
-  }
+	.policy-txt {
+    height: 90%;
+	}
+
+	.headline {
+		h1 {
+			font-size: 61px;
+			margin-bottom: 24px;
+		}
+	}
 }
