--- a/src/app/main/info/privacy-policy/privacy-policy.scss
+++ b/src/app/main/info/privacy-policy/privacy-policy.scss
@@ -1,7 +1,15 @@
+@use "../../../../styles/mixins";
+
 * {
 	box-sizing: border-box;
 	margin-bottom: 32px;
 	scroll-behavior: smooth;
+
+	button {
+		border: none;
+		background: none;
+		cursor: pointer;
+	}
 
 	h2 {
 		margin-bottom: 12px;
@@ -30,29 +38,47 @@
 	span {
 		font-size: var(--fs-small);
 
-    ul {
-      margin-left: 32px;
+		ul {
+			margin-left: 32px;
 
-      li {
-        margin-bottom: 12px;
-      }
-    }
+			li {
+				margin-bottom: 12px;
+			}
+		}
 	}
 }
 
 .content {
 	padding: 24px;
 	height: 80vh;
-  overflow-y: auto;
+	overflow-y: auto;
 
 	.policy-txt {
-    height: 90%;
+		height: 90%;
 	}
 
 	.headline {
+		width: 100%;
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
+
 		h1 {
-			font-size: 61px;
+			font-size: 47px;
 			margin-bottom: 24px;
+		}
+	}
+}
+
+@include mixins.desktop {
+	.content {
+		height: 90vh;
+
+		.headline {
+			h1 {
+				font-size: 61px;
+			}
 		}
 	}
 }
