--- a/src/app/main/auth/login/login.scss
+++ b/src/app/main/auth/login/login.scss
@@ -15,6 +15,14 @@ body {
 	align-items: center;
 }
 
+
+.error-message {
+	font-size: 14px;
+	color: red;
+	margin-top: 4px;
+	display: block;
+}
+
 .login-overlay {
 	position: fixed;
 	inset: 0;
@@ -45,7 +53,6 @@ body {
 		left: 50%;
 		transform: scale(1) translate(-50%, -50%);
 	}
-
 	100% {
 		top: calc(env(safe-area-inset-top, 0px) + 18px);
 		left: calc(env(safe-area-inset-left, 0px) + 18px);
@@ -58,7 +65,6 @@ body {
 		opacity: 1;
 		visibility: visible;
 	}
-
 	100% {
 		opacity: 0;
 		visibility: hidden;
@@ -169,12 +175,13 @@ body {
 		align-items: center;
 		gap: 20px;
 		margin-bottom: 24px;
+		width: 100%;
 
 		.input-wrapper {
 			position: relative;
 			width: 100%;
 			display: flex;
-			align-items: center;
+			flex-direction: column;
 
 			input {
 				width: 100%;
@@ -188,6 +195,8 @@ body {
 			.input-icon {
 				position: absolute;
 				right: 12px;
+				top: 50%;
+				transform: translateY(-50%);
 				height: 18px;
 				width: 18px;
 				pointer-events: none;
@@ -220,13 +229,6 @@ body {
 				color: var(--bg-color-white);
 				cursor: pointer;
 				font-weight: bold;
-			}
-
-			a {
-				text-decoration: none;
-				font-weight: bold;
-				color: whitesmoke;
-				padding: 8px;
 			}
 		}
 
@@ -261,10 +263,6 @@ body {
 		width: 100px;
 	}
 
-	.login {
-		width: 100%;
-	}
-
 	.content {
 		position: fixed;
 		top: 50%;
@@ -278,18 +276,6 @@ body {
 			justify-content: flex-end;
 			gap: 32px;
 			z-index: 100;
-
-			button {
-				height: 30px;
-				padding: 0 12px;
-
-				a {
-					text-decoration: none;
-					font-weight: bold;
-					color: var(--bg-color-white);
-					padding: 8px;
-				}
-			}
 		}
 
 		.legal-notes {
@@ -332,11 +318,7 @@ body {
 			flex-direction: row;
 			gap: 20px;
 
-			.login-button {
-				width: 150px;
-				height: 40px;
-			}
-
+			.login-button,
 			.guest-login {
 				width: 150px;
 				height: 40px;
