--- a/src/app/main/auth/login/login.scss
+++ b/src/app/main/auth/login/login.scss
@@ -89,6 +89,10 @@ form {
 
 .login {
 	width: 100%;
+
+  .register-desktop {
+    display: none;
+  }
 }
 
 .content {
@@ -144,7 +148,6 @@ form {
 }
 
 .login-window {
-	height: 60vh;
 	width: 70vw;
 	border: none;
 	border-radius: 20px;
@@ -230,15 +233,11 @@ form {
 			border: none;
 			border-radius: 10px;
 			background-color: var(--bg-color-blue-darker);
-			color: var(--text-color-disabled);
+			color: var(--bg-color-white);
+			font-weight: bold;
 			width: 150px;
 			height: 40px;
-
-			&.active-button {
-				color: var(--bg-color-white);
-				cursor: pointer;
-				font-weight: bold;
-			}
+			cursor: pointer;
 		}
 
 		.guest-login {
@@ -247,7 +246,7 @@ form {
 			background-color: var(--bg-color-white);
 			width: 150px;
 			height: 40px;
-      cursor: pointer;
+			cursor: pointer;
 
 			a {
 				text-decoration: none;
@@ -280,19 +279,43 @@ form {
 		transform: translate(-50%, -50%);
 
 		.register {
-			position: fixed;
-			top: calc(env(safe-area-inset-top, 0px) + 18px);
-			right: calc(env(safe-area-inset-right, 0px) + 18px);
-			justify-content: flex-end;
-			gap: 32px;
-			z-index: 100;
+			display: none;
 		}
+	}
 
-		.legal-notes {
+	.logo {
+		display: flex;
+		justify-content: space-between;
+
+		.register-desktop {
 			width: 100%;
 			display: flex;
-			justify-content: space-evenly;
-			margin-bottom: 12px;
+			justify-content: end;
+			align-items: start;
+			padding-top: 22px;
+			padding-right: 22px;
+			gap: 24px;
+
+			span {
+				font-size: 20px;
+				color: var(--text-color-blue);
+				font-weight: 500;
+			}
+
+			button {
+				border: none;
+				border-radius: 10px;
+				background-color: var(--bg-color-blue-darker);
+				width: 120px;
+				height: 30px;
+
+				a {
+					text-decoration: none;
+					font-weight: bold;
+					color: var(--bg-color-white);
+					padding: 8px;
+				}
+			}
 		}
 	}
 
