--- a/src/app/main/auth/login/login.scss
+++ b/src/app/main/auth/login/login.scss
@@ -98,16 +98,17 @@ form {
 .content {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: space-evenly;
 	align-items: center;
 	margin-top: 32px;
+  height: 80vh;
 
 	.register {
 		width: 100%;
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		margin-bottom: 48px;
+		margin-bottom: 32px;
 		gap: 24px;
 
 		span {
@@ -136,7 +137,6 @@ form {
 		width: 100%;
 		display: flex;
 		justify-content: space-around;
-		margin-bottom: 12px;
 
 		a {
 			text-decoration: none;
@@ -157,7 +157,7 @@ form {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	margin-bottom: 64px;
+	margin-bottom: 24px;
 
 	.headline {
 		display: flex;
